# stlconverter

./: README.md
.github/workflows/: pages-publish.yml  python-publish.yml
js/: package-lock.json  package.json  tailwind.config.js
js/src/: converter.html  index.html  index.js
js/src/modules/: conversion.js
js/src/styles/: output.css  template.css
python/: README.md  pyproject.toml
python/src/stlconverter/: __main__.py
python/src/stlconverter/modules/: conversion.py  input_handling.py
scripts/compileCSS/: unix.sh  windows.bat
scripts/startLocalServer/: unix.sh  windows.bat
